@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix tests for some perl+thread combos
+
 0.000006  2016-03-08 08:47:22-08:00 America/Los_Angeles
 
     - Fix #6, make tools more argument aware
